--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,1 +1,12 @@
-<router-outlet></router-outlet>
+<app-main-nav></app-main-nav>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            <router-outlet></router-outlet>
+        </div>
+        <div class="col-md-4">
+            Menüler
+
+        </div>
+    </div>
+</div>
