--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,11 +1,11 @@
 <app-main-nav></app-main-nav>
 <div class="container">
-    <div class="row">
+    <div class="row mt-4">
         <div class="col-md-8">
             <router-outlet></router-outlet>
         </div>
         <div class="col-md-4">
-            Menüler
+            <app-menu-category></app-menu-category>
 
         </div>
     </div>
