Article loading placeholders created.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,2 @@
-<p>home works!</p>
+<app-article [totalCount]="totalCount" [articles]="articles" [page]="page" [pageSize]="pageSize"
+    [loadingItem]="loadingItem"></app-article>
