--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -81,7 +81,7 @@
             <span class="badge badge-pill badge-primary">
                 <i class="fa fa-comment"></i>{{commentCount}}
             </span>
-            <a [routerLink]="['/makale', id]" class="btn btn-primary btn-sm float-right">
+            <a [routerLink]="['/makale',title | urlformat ,id]" class="btn btn-primary btn-sm float-right">
                 devamını oku
             </a>
         </div>
