article selection via category is completed.

--- a/src/app/components/menu-category/menu-category.component.html
+++ b/src/app/components/menu-category/menu-category.component.html
@@ -8,7 +8,7 @@
         </div>
         <h3 *ngFor="let item of categories">
             <strong>
-                <a [routerLink]="['/Kategori',item.categoryName,item.id]" class="btn btn-link"><i
+                <a [routerLink]="['/kategori', item.categoryName, item.id]" class="btn btn-link"><i
                         class="fa fa-arrow-circle-right"></i> {{ item.categoryName }} </a>
             </strong>
         </h3>
