archive component was added. Bugs were fixed.

--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -7,6 +7,7 @@
         <div class="col-md-4">
             <app-menu-category></app-menu-category>
             <app-menu-article-most-view></app-menu-article-most-view>
+            <app-menu-archive></app-menu-archive>
 
         </div>
     </div>
