--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,3 +1,33 @@
 <app-page-title [title]="'İletişim'"></app-page-title>
-<hr>
-<p>contact works!</p>
+<form *ngIf="info==null" (ngSubmit)="onSubmit()" [formGroup]="contactForm">
+    <div class="form-container">
+        <mat-form-field>
+            <input matInput placeholder="İsminiz" formControlName="name">
+            <mat-error *ngIf="getControls.name.invalid">{{getValidationMessages(getControls.name,"isim")}}</mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="E-mail Adresiniz" formControlName="email">
+            <mat-error *ngIf="getControls.email.invalid">{{getValidationMessages(getControls.email,"email")}}
+            </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Konu" formControlName="subject">
+            <mat-error *ngIf="getControls.subject.invalid">{{getValidationMessages(getControls.subject,"konu")}}
+            </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-error *ngIf="getControls.message.invalid">{{getValidationMessages(getControls.message,"mesaj")}}
+            </mat-error>
+            <textarea rows="5" matInput placeholder="Mesajınız" formControlName="message"></textarea>
+        </mat-form-field>
+
+        <button type="submit" [disabled]="loading" color="primary" mat-raised-button>
+            <span *ngIf="loading" class="spinner-border spinner-border-sm" role="status"></span>
+            Gönder
+        </button>
+    </div>
+</form>
+<div *ngIf="info!=null" class="alert" [ngClass]="{'alert-primary':success,'alert-danger':!success}">{{info}}</div>
