--- a/src/app/nav/admin-nav/admin-nav.component.html
+++ b/src/app/nav/admin-nav/admin-nav.component.html
@@ -1,1 +1,33 @@
-<p>admin-nav works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="#">My Blog Yönetim Paneli</a>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/admin">Anasayfa <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
+                        data-toggle="dropdown" aria-expanded="false">
+                        Makale
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                        <li><a class="dropdown-item" routerLink="/admin/makale/ekle">Makale Ekle</a></li>
+                        <li><a class="dropdown-item" routerLink="/admin/makale/liste">Makale Listele</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+
+                    <a class="nav-link" routerLink="/"><i class="fa-solid fa-house"></i> Blog anasayfasına dönüş <span
+                            class="sr-only">(current)</span></a>
+                </li>
+
+            </ul>
+
+        </div>
+    </div>
+</nav>
