--- a/src/app/nav/main-nav/main-nav.component.html
+++ b/src/app/nav/main-nav/main-nav.component.html
@@ -5,7 +5,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">Hidden brand</a>
+            <a class="navbar-brand" href="#">My Blog</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item" [ngClass]="{'active': pageActive==1}">
                     <a class="nav-link" routerLink="/">Anasayfa <span class="sr-only">(current)</span></a>
