--- a/src/app/admin-pages/admin-article/admin-article-list/admin-article-list.component.html
+++ b/src/app/admin-pages/admin-article/admin-article-list/admin-article-list.component.html
@@ -1,1 +1,43 @@
-<p>admin-article-list works!</p>
+<div class="mat-elevation-z8">
+    <table style="width: 100%;" mat-table [dataSource]="dataSource">
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="picture">
+            <th mat-header-cell *matHeaderCellDef> Resim </th>
+            <td mat-cell *matCellDef="let article">
+                <img class="img-thumbnail" style="width: 50px; height: 50px;"
+                    [src]="article.picture ||'assets/article_empty.jpeg'" />
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef> Başlık </th>
+            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="category">
+            <th mat-header-cell *matHeaderCellDef> Kategori </th>
+            <td mat-cell *matCellDef="let element"> <strong>{{element.category.categoryName}}</strong> </td>
+        </ng-container>
+
+        <ng-container matColumnDef="commentCount">
+            <th mat-header-cell *matHeaderCellDef> Yorum sayısı </th>
+            <td mat-cell *matCellDef="let element"> {{element.commentCount}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="viewCount">
+            <th mat-header-cell *matHeaderCellDef> Görüntülenme sayısı </th>
+            <td mat-cell *matCellDef="let element"> {{element.viewCount}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="publishDate">
+            <th mat-header-cell *matHeaderCellDef> Yayınlanma tarihi </th>
+            <td mat-cell *matCellDef="let element"> {{element.publishDate}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
