--- a/src/app/layout/admin-layout/admin-layout.component.html
+++ b/src/app/layout/admin-layout/admin-layout.component.html
@@ -1,2 +1,9 @@
 <app-admin-nav></app-admin-nav>
-<router-outlet></router-outlet>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-12">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+
+</div>
