Ck editor is involved to adding article part.

--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -45,7 +45,7 @@
         </span>
     </div>
     <div class="card-body">
-        <div [innerHTML]="article.contentMain">
+        <div class="ck ck-content" [innerHTML]="domSanitzer.bypassSecurityTrustHtml(article.contentMain)">
 
         </div>
 
