--- a/src/app/admin-pages/admin-article/admin-article-add/admin-article-add.component.html
+++ b/src/app/admin-pages/admin-article/admin-article-add/admin-article-add.component.html
@@ -34,17 +34,17 @@
                     </mat-error>
                 </mat-form-field>
 
-                <mat-form-field>
-                    <input type="text" placeholder="Makale içerik" formControlName="contentMain" matInput />
-                    <mat-error *ngIf="getControls.category.invalid">
-                        {{myValidationService.getValidationMessages(getControls.contentMain,"Makale içerik")}}
+                <div style="border: 1px solid black;" class="mb-2">
+                    <ckeditor [editor]="Editor" (ready)="onReady($event)" formControlName="contentMain"></ckeditor>
 
-                    </mat-error>
-                </mat-form-field>
+                </div>
+
+
+
 
                 <button type="submit" [disabled]="loading" color="primary" mat-raised-button>
                     <span *ngIf="loading" class="spinner-border spinner-border-sm" role="status"></span>
-                    Gönder
+                    Makale ekle
                 </button>
             </div>
 
