--- a/src/app/admin-pages/admin-article/admin-article-list/admin-article-list.component.html
+++ b/src/app/admin-pages/admin-article/admin-article-list/admin-article-list.component.html
@@ -35,6 +35,14 @@
             <td mat-cell *matCellDef="let element"> {{element.publishDate}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> İşlemler </th>
+            <td mat-cell *matCellDef="let element">
+                <button [routerLink]="['/admin/makale/guncelle',element.id]" mat-raised-button
+                    color="primary">Güncelle</button>
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
