--- a/src/app/admin-pages/admin-article/admin-article-list/admin-article-list.component.html
+++ b/src/app/admin-pages/admin-article/admin-article-list/admin-article-list.component.html
@@ -38,8 +38,9 @@
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef> İşlemler </th>
             <td mat-cell *matCellDef="let element">
-                <button [routerLink]="['/admin/makale/guncelle',element.id]" mat-raised-button
-                    color="primary">Güncelle</button>
+                <button [routerLink]="['/admin/makale/guncelle',element.id]" mat-raised-button color="primary"
+                    class=" mr-2">Güncelle</button>
+                <button (click)="deleteArticle(element.id)" mat-raised-button color="warn">Sil</button>
             </td>
         </ng-container>
 
