--- a/src/app/admin-pages/admin-article/admin-article-update/admin-article-update.component.html
+++ b/src/app/admin-pages/admin-article/admin-article-update/admin-article-update.component.html
@@ -1,57 +1,83 @@
 <div class="row">
     <div class="col-md-9">
-        <form *ngIf="info==null" (ngSubmit)="onSubmit()" [formGroup]="articleForm">
-            <div class="form-container">
+        <div *ngIf="!contentLoading">
+            <div role="alert" *ngIf="info!=null" class="alert alert-danger mt-3">
+                {{info}}
+            </div>
+            <form *ngIf="info==null" (ngSubmit)="onSubmit()" [formGroup]="articleForm">
+                <div class="form-container">
 
-                <mat-form-field>
-                    <input type="text" placeholder="kategori seç" formControlName="category" matInput
-                        [matAutocomplete]="auto" />
-                    <mat-error *ngIf="getControls.category.invalid">
-                        {{myValidationService.getValidationMessages(getControls.category,"kategori")}}
+                    <mat-form-field>
+                        <input type="text" placeholder="Kategori seç" formControlName="category" matInput
+                            [matAutocomplete]="auto" />
+                        <mat-error *ngIf="getControls.category.invalid">
+                            {{myValidationService.getValidationMessages(getControls.category,"kategori")}}
 
-                    </mat-error>
+                        </mat-error>
 
-                    <mat-autocomplete [displayWith]="displayCategoryName" #auto="matAutocomplete">
-                        <mat-option *ngFor="let item of categories" [value]="item">
-                            {{item.categoryName}}
-                        </mat-option>
-                    </mat-autocomplete>
-                </mat-form-field>
+                        <mat-autocomplete [displayWith]="displayCategoryName" #auto="matAutocomplete">
+                            <mat-option *ngFor="let item of categories" [value]="item">
+                                {{item.categoryName}}
+                            </mat-option>
+                        </mat-autocomplete>
+                    </mat-form-field>
 
-                <mat-form-field>
-                    <input type="text" placeholder="Makale başlık" formControlName="title" matInput />
-                    <mat-error *ngIf="getControls.category.invalid">
-                        {{myValidationService.getValidationMessages(getControls.title,"Makale başlık")}}
+                    <mat-form-field>
+                        <input type="text" placeholder="Makale başlık" formControlName="title" matInput />
+                        <mat-error *ngIf="getControls.category.invalid">
+                            {{myValidationService.getValidationMessages(getControls.title,"Makale başlık")}}
 
-                    </mat-error>
-                </mat-form-field>
+                        </mat-error>
+                    </mat-form-field>
 
-                <mat-form-field>
-                    <input type="text" placeholder="Makale içerik özet" formControlName="contentSummary" matInput />
-                    <mat-error *ngIf="getControls.category.invalid">
-                        {{myValidationService.getValidationMessages(getControls.contentSummary,"Makale içerik özet")}}
+                    <mat-form-field>
+                        <input type="text" placeholder="Makale içerik özet" formControlName="contentSummary" matInput />
+                        <mat-error *ngIf="getControls.category.invalid">
+                            {{myValidationService.getValidationMessages(getControls.contentSummary,"Makale özet")}}
+                        </mat-error>
+                    </mat-form-field>
 
-                    </mat-error>
-                </mat-form-field>
+                    <div style="border: 1px solid black;" class="mb-2">
+                        <ckeditor [editor]="Editor" (ready)="onReady($event)" formControlName="contentMain"></ckeditor>
 
-                <div style="border: 1px solid black;" class="mb-2">
-                    <ckeditor [editor]="Editor" (ready)="onReady($event)" formControlName="contentMain"></ckeditor>
+                    </div>
 
+                    <button type="submit" [disabled]="loading" color="primary" mat-raised-button>
+                        <span *ngIf="loading" class="spinner-border spinner-border-sm" role="status"></span>
+                        Makale güncelle
+                    </button>
                 </div>
 
-
-
-
-                <button type="submit" [disabled]="loading" color="primary" mat-raised-button>
-                    <span *ngIf="loading" class="spinner-border spinner-border-sm" role="status"></span>
-                    Makale güncelle
-                </button>
-            </div>
-
-        </form>
-        <div role="alert" *ngIf="info!=null" class="alert alert-danger mt-3">
-            {{info}}
+            </form>
         </div>
+        <div *ngIf="contentLoading">
+            <h3>Makale Yükleniyor..</h3>
+            <div class="spinner-grow text-primary" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-secondary" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-success" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-danger" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-warning" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-info" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-light" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-dark" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+
     </div>
     <div class="col-md-3">
         <div class="card text-white bg-primary">
