--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,5 +1,5 @@
 <app-main-nav></app-main-nav>
-<div class="container">
+<div class="container" style="margin-bottom: 50px;">
     <div class="row mt-4">
         <div class="col-md-8">
             <router-outlet></router-outlet>
